# sensors-gui-thing

./: Cargo.toml  shell.nix
src/: main.rs  sensors.rs
