[package]
name = "sensors-gui-thing"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vgtk = "0.2.1"
serde = "1.0.111"
serde_json = "1.0.55"
pretty_env_logger = "0.4.0"
anyhow = "1.0.31"
log = "0.4.8"
